Rework Javac flag builder tests, add missing Javac compiler tests